--- a/res/xml/lime_dayi.xml
+++ b/res/xml/lime_dayi.xml
@@ -21,15 +21,15 @@
 **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 -->
-
+<!-- 	xmlns:limehd="http://schemas.android.com/apk/res/net.toload.main.hd" -->
 <Keyboard xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:limehd="http://schemas.android.com/apk/res/net.toload.main.hd"
 	android:keyWidth="10%p" android:horizontalGap="0px"
 	android:verticalGap="0px" android:keyHeight="@dimen/key_height">
 
 	<Row>
 		<Key android:codes="49" android:keyLabel="1" android:keyEdgeFlags="left" />
-		<Key android:codes="50" android:keyLabel="2" limehd:testAttribute="testing ..." />
+		<Key android:codes="50" android:keyLabel="2" /> 
+<!-- 		limehd:testAttribute="testing ..." /> -->
 		<Key android:codes="51" android:keyLabel="3" />
 		<Key android:codes="52" android:keyLabel="4" />
 		<Key android:codes="53" android:keyLabel="5" />
