--- a/res/layout/candidatepopup.xml
+++ b/res/layout/candidatepopup.xml
@@ -4,7 +4,7 @@
   android:baselineAligned="true" 
   android:orientation="vertical" 
   android:layout_width="match_parent" 
-  android:layout_height="match_parent"
+  android:layout_height="wrap_content"
   android:background="@drawable/keyboard_suggest_strip">
 
  <ScrollView 
@@ -17,7 +17,7 @@
 	android:layout_y="20px" -->
 
     <view xmlns:android="http://schemas.android.com/apk/res/android"
-		    class="net.toload.main.hd.candidate.CandidatePopupView"
+		    class="net.toload.main.hd.candidate.CandidateExpandedView"
 	        android:id="@+id/candidatePopup"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
